# recllm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: app.py  requirements.txt
architecture/: architecture-spec.md
architecture/adrs/: ADR-001-polars-over-pandas.md  ADR-002-ollama-primary-local.md  ADR-003-sklearn-api-over-config.md  ADR-004-llm-feature-caching.md  ADR-005-gpu-memory-sharing.md
examples/: experiment_config.yaml  llm_experiment.py  movielens_benchmark.py
modules/: module-index.md
recllm/: __init__.py
recllm/data/: __init__.py  amazon.py  base.py  bookcrossing.py  movielens.py  preprocessing.py  splitting.py  yelp.py
recllm/enhance/: __init__.py  explainer.py  feature_enhancer.py  ranker.py
recllm/eval/: __init__.py  metrics.py  significance.py  visualization.py
recllm/llm/: __init__.py  base.py  llamacpp.py  ollama.py  openai_client.py
recllm/models/: __init__.py  base.py  bpr.py  deepfm.py  lightgcn.py  ncf.py  popularity.py  sasrec.py
recllm/pipeline/: __init__.py  config.py  recommendation.py
recllm/utils/: __init__.py  hardware.py  reproducibility.py
tests/test_data/: test_base.py
tests/test_enhance/: test_explainer.py  test_feature_enhancer.py  test_ranker.py
tests/test_eval/: test_metrics.py  test_significance.py  test_visualization.py
tests/test_models/: test_deepfm.py  test_popularity.py
tests/test_pipeline/: test_config.py
